# mago-clone

./: Cargo.toml  README.md  nightly-version
crates/analyzer/src/: assertion.rs
crates/analyzer/src/reconciler/: simple_assertion_reconciler.rs  simple_negated_assertion_reconciler.rs
crates/analyzer/tests/: mod.rs
crates/analyzer/tests/cases/: issue_2008.php
crates/linter/src/: settings.rs
crates/linter/src/rule/: mod.rs
crates/linter/src/rule/best_practices/: final_controller.rs
crates/linter/src/rule/correctness/: mod.rs  suspicious_explode_arguments.rs
crates/linter/src/rule/maintainability/: no_boolean_flag_parameter.rs
crates/linter/src/rule/redundancy/: no_redundant_string_concat.rs
crates/phpdoc-syntax/src/parser/internal/type/: composite.rs  mod.rs
crates/syntax/src/parser/internal/class_like/: trait_use.rs
docs/content/en/guide/: configuration.md  installation.md  upgrading.md
docs/content/en/recipes/: docker.md
docs/content/fr/guide/: configuration.md  installation.md  upgrading.md
docs/content/fr/recipes/: docker.md
docs/content/zh/guide/: configuration.md  installation.md  upgrading.md
docs/content/zh/recipes/: docker.md
